analizador-cadenas/generated/GramCadenasParser.js
// Generated from c:/Users/marsa/analizador-cadenas/GramCadenas.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import GramCadenasListener from './GramCadenasListener.js';
import GramCadenasVisitor from './GramCadenasVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class GramCadenasParser extends antlr4.Parser {

    static grammarFileName = "GramCadenas.g4";
    static literalNames = [ null, null, null, null, null, "'devolver'", 
                            "'variable'", "'='", null, null, "'longitud'", 
                            "'invertir'", "'reemplazar'", "'+'", "'imprimir'", 
                            "';'", "','", null, null, null, "'('", "')'", 
                            "'{'", "'}'", null, null, "'\"'", "' '" ];
    static symbolicNames = [ null, "DOBCOM_APERTURA", "DOBCOM_CIERRE", "ESPACIO", 
                             "FUN", "DEV", "VAR", "EQ", "MAYUS", "MINUS", 
                             "LONG", "INVERT", "REMPL", "ADD", "IMP", "SEMICOLON", 
                             "COMA", "NOMBRE", "LETRA", "NUM", "LPAREN", 
                             "RPAREN", "LBRACE", "RBRACE", "SIMB", "WS", 
                             "COMILLA_CIERRE_LEX", "ESPACIO_EN_CADENA_LEX" ];
    static ruleNames = [ "programa", "ejecucion", "declaracion", "funcion", 
                         "argumentos", "instruccion", "operacion_texto", 
                         "transformacion", "concatenar", "impresion", "retorno", 
                         "valor", "cadena", "texto", "caracteres", "variable" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = GramCadenasParser.ruleNames;
        this.literalNames = GramCadenasParser.literalNames;
        this.symbolicNames = GramCadenasParser.symbolicNames;
    }



	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, GramCadenasParser.RULE_programa);
	    var _la = 0;
	    try {
	        localctx = new ProgramContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 37;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 147536) !== 0)) {
	            this.state = 35;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 6:
	                this.state = 32;
	                this.declaracion();
	                break;
	            case 4:
	                this.state = 33;
	                this.funcion();
	                break;
	            case 14:
	            case 17:
	                this.state = 34;
	                this.ejecucion();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 39;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 40;
	        this.match(GramCadenasParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ejecucion() {
	    let localctx = new EjecucionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, GramCadenasParser.RULE_ejecucion);
	    try {
	        localctx = new EjecutionContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 45; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 45;
	        		this._errHandler.sync(this);
	        		var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        		switch(la_) {
	        		case 1:
	        		    this.state = 42;
	        		    this.concatenar();
	        		    break;

	        		case 2:
	        		    this.state = 43;
	        		    this.impresion();
	        		    break;

	        		case 3:
	        		    this.state = 44;
	        		    this.operacion_texto();
	        		    break;

	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 47; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,3, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaracion() {
	    let localctx = new DeclaracionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, GramCadenasParser.RULE_declaracion);
	    try {
	        this.state = 58;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new DeclaracionValorContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 49;
	            this.match(GramCadenasParser.VAR);
	            this.state = 50;
	            this.match(GramCadenasParser.NOMBRE);
	            this.state = 51;
	            this.match(GramCadenasParser.EQ);
	            this.state = 52;
	            this.valor();
	            this.state = 53;
	            this.match(GramCadenasParser.SEMICOLON);
	            break;

	        case 2:
	            localctx = new DeclaracionSinValorContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 55;
	            this.match(GramCadenasParser.VAR);
	            this.state = 56;
	            this.match(GramCadenasParser.NOMBRE);
	            this.state = 57;
	            this.match(GramCadenasParser.SEMICOLON);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcion() {
	    let localctx = new FuncionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, GramCadenasParser.RULE_funcion);
	    var _la = 0;
	    try {
	        localctx = new FuncionesContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 60;
	        this.match(GramCadenasParser.FUN);
	        this.state = 61;
	        this.match(GramCadenasParser.NOMBRE);
	        this.state = 66;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 62;
	            this.match(GramCadenasParser.LPAREN);
	            this.state = 63;
	            this.argumentos();
	            this.state = 64;
	            this.match(GramCadenasParser.RPAREN);
	        }

	        this.state = 68;
	        this.match(GramCadenasParser.LBRACE);
	        this.state = 69;
	        this.instruccion();
	        this.state = 70;
	        this.match(GramCadenasParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argumentos() {
	    let localctx = new ArgumentosContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, GramCadenasParser.RULE_argumentos);
	    try {
	        localctx = new ArgumentacionContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this.variable();
	        this.state = 77;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 73;
	                this.match(GramCadenasParser.COMA);
	                this.state = 74;
	                this.argumentos(); 
	            }
	            this.state = 79;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instruccion() {
	    let localctx = new InstruccionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, GramCadenasParser.RULE_instruccion);
	    var _la = 0;
	    try {
	        localctx = new InstruccionesContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 83; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 83;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 17:
	                this.state = 80;
	                this.operacion_texto();
	                break;
	            case 14:
	                this.state = 81;
	                this.impresion();
	                break;
	            case 5:
	                this.state = 82;
	                this.retorno();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 85; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 147488) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operacion_texto() {
	    let localctx = new Operacion_textoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, GramCadenasParser.RULE_operacion_texto);
	    try {
	        localctx = new OperacionTextoContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 87;
	        this.variable();
	        this.state = 88;
	        this.match(GramCadenasParser.EQ);
	        this.state = 89;
	        this.transformacion();
	        this.state = 90;
	        this.match(GramCadenasParser.LPAREN);
	        this.state = 91;
	        this.cadena();
	        this.state = 92;
	        this.match(GramCadenasParser.RPAREN);
	        this.state = 93;
	        this.match(GramCadenasParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transformacion() {
	    let localctx = new TransformacionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, GramCadenasParser.RULE_transformacion);
	    var _la = 0;
	    try {
	        localctx = new TransformacionTextoContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 7936) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	concatenar() {
	    let localctx = new ConcatenarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, GramCadenasParser.RULE_concatenar);
	    try {
	        localctx = new ConcatenarTextoContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this.variable();
	        this.state = 98;
	        this.match(GramCadenasParser.EQ);
	        this.state = 99;
	        this.cadena();
	        this.state = 100;
	        this.match(GramCadenasParser.ADD);
	        this.state = 101;
	        this.cadena();
	        this.state = 102;
	        this.match(GramCadenasParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	impresion() {
	    let localctx = new ImpresionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, GramCadenasParser.RULE_impresion);
	    try {
	        localctx = new ImpresionTextoContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 104;
	        this.match(GramCadenasParser.IMP);
	        this.state = 105;
	        this.match(GramCadenasParser.LPAREN);
	        this.state = 106;
	        this.valor();
	        this.state = 107;
	        this.match(GramCadenasParser.RPAREN);
	        this.state = 108;
	        this.match(GramCadenasParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	retorno() {
	    let localctx = new RetornoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, GramCadenasParser.RULE_retorno);
	    try {
	        localctx = new RetornoTextoContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 110;
	        this.match(GramCadenasParser.DEV);
	        this.state = 111;
	        this.valor();
	        this.state = 112;
	        this.match(GramCadenasParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valor() {
	    let localctx = new ValorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, GramCadenasParser.RULE_valor);
	    try {
	        localctx = new ValorTextoContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            this.state = 114;
	            this.match(GramCadenasParser.NUM);
	            break;
	        case 1:
	        case 17:
	            this.state = 115;
	            this.cadena();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cadena() {
	    let localctx = new CadenaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, GramCadenasParser.RULE_cadena);
	    try {
	        localctx = new CadenaTextoContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.state = 118;
	            this.texto();
	            break;
	        case 17:
	            this.state = 119;
	            this.variable();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	texto() {
	    let localctx = new TextoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, GramCadenasParser.RULE_texto);
	    var _la = 0;
	    try {
	        localctx = new TextoTextContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(GramCadenasParser.DOBCOM_APERTURA);
	        this.state = 126;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 17563656) !== 0)) {
	            this.state = 123;
	            this.caracteres();
	            this.state = 128;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 129;
	        this.match(GramCadenasParser.DOBCOM_CIERRE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	caracteres() {
	    let localctx = new CaracteresContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, GramCadenasParser.RULE_caracteres);
	    try {
	        this.state = 135;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            localctx = new CarNumContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 131;
	            this.match(GramCadenasParser.NUM);
	            break;
	        case 24:
	            localctx = new CarSimbContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 132;
	            this.match(GramCadenasParser.SIMB);
	            break;
	        case 18:
	            localctx = new CarLetraContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 133;
	            this.match(GramCadenasParser.LETRA);
	            break;
	        case 3:
	            localctx = new CarEspacioContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 134;
	            this.match(GramCadenasParser.ESPACIO);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable() {
	    let localctx = new VariableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, GramCadenasParser.RULE_variable);
	    try {
	        localctx = new NomVariablesContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        this.match(GramCadenasParser.NOMBRE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

GramCadenasParser.EOF = antlr4.Token.EOF;
GramCadenasParser.DOBCOM_APERTURA = 1;
GramCadenasParser.DOBCOM_CIERRE = 2;
GramCadenasParser.ESPACIO = 3;
GramCadenasParser.FUN = 4;
GramCadenasParser.DEV = 5;
GramCadenasParser.VAR = 6;
GramCadenasParser.EQ = 7;
GramCadenasParser.MAYUS = 8;
GramCadenasParser.MINUS = 9;
GramCadenasParser.LONG = 10;
GramCadenasParser.INVERT = 11;
GramCadenasParser.REMPL = 12;
GramCadenasParser.ADD = 13;
GramCadenasParser.IMP = 14;
GramCadenasParser.SEMICOLON = 15;
GramCadenasParser.COMA = 16;
GramCadenasParser.NOMBRE = 17;
GramCadenasParser.LETRA = 18;
GramCadenasParser.NUM = 19;
GramCadenasParser.LPAREN = 20;
GramCadenasParser.RPAREN = 21;
GramCadenasParser.LBRACE = 22;
GramCadenasParser.RBRACE = 23;
GramCadenasParser.SIMB = 24;
GramCadenasParser.WS = 25;
GramCadenasParser.COMILLA_CIERRE_LEX = 26;
GramCadenasParser.ESPACIO_EN_CADENA_LEX = 27;

GramCadenasParser.RULE_programa = 0;
GramCadenasParser.RULE_ejecucion = 1;
GramCadenasParser.RULE_declaracion = 2;
GramCadenasParser.RULE_funcion = 3;
GramCadenasParser.RULE_argumentos = 4;
GramCadenasParser.RULE_instruccion = 5;
GramCadenasParser.RULE_operacion_texto = 6;
GramCadenasParser.RULE_transformacion = 7;
GramCadenasParser.RULE_concatenar = 8;
GramCadenasParser.RULE_impresion = 9;
GramCadenasParser.RULE_retorno = 10;
GramCadenasParser.RULE_valor = 11;
GramCadenasParser.RULE_cadena = 12;
GramCadenasParser.RULE_texto = 13;
GramCadenasParser.RULE_caracteres = 14;
GramCadenasParser.RULE_variable = 15;

class ProgramaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GramCadenasParser.RULE_programa;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class ProgramContext extends ProgramaContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	EOF() {
	    return this.getToken(GramCadenasParser.EOF, 0);
	};

	declaracion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DeclaracionContext);
	    } else {
	        return this.getTypedRuleContext(DeclaracionContext,i);
	    }
	};

	funcion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FuncionContext);
	    } else {
	        return this.getTypedRuleContext(FuncionContext,i);
	    }
	};

	ejecucion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(EjecucionContext);
	    } else {
	        return this.getTypedRuleContext(EjecucionContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.enterProgram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.exitProgram(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof GramCadenasVisitor ) {
	        return visitor.visitProgram(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

GramCadenasParser.ProgramContext = ProgramContext;

class EjecucionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GramCadenasParser.RULE_ejecucion;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class EjecutionContext extends EjecucionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	concatenar = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ConcatenarContext);
	    } else {
	        return this.getTypedRuleContext(ConcatenarContext,i);
	    }
	};

	impresion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ImpresionContext);
	    } else {
	        return this.getTypedRuleContext(ImpresionContext,i);
	    }
	};

	operacion_texto = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Operacion_textoContext);
	    } else {
	        return this.getTypedRuleContext(Operacion_textoContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.enterEjecution(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.exitEjecution(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof GramCadenasVisitor ) {
	        return visitor.visitEjecution(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

GramCadenasParser.EjecutionContext = EjecutionContext;

class DeclaracionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GramCadenasParser.RULE_declaracion;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class DeclaracionSinValorContext extends DeclaracionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	VAR() {
	    return this.getToken(GramCadenasParser.VAR, 0);
	};

	NOMBRE() {
	    return this.getToken(GramCadenasParser.NOMBRE, 0);
	};

	SEMICOLON() {
	    return this.getToken(GramCadenasParser.SEMICOLON, 0);
	};

	enterRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.enterDeclaracionSinValor(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.exitDeclaracionSinValor(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof GramCadenasVisitor ) {
	        return visitor.visitDeclaracionSinValor(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

GramCadenasParser.DeclaracionSinValorContext = DeclaracionSinValorContext;

class DeclaracionValorContext extends DeclaracionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	VAR() {
	    return this.getToken(GramCadenasParser.VAR, 0);
	};

	NOMBRE() {
	    return this.getToken(GramCadenasParser.NOMBRE, 0);
	};

	EQ() {
	    return this.getToken(GramCadenasParser.EQ, 0);
	};

	valor() {
	    return this.getTypedRuleContext(ValorContext,0);
	};

	SEMICOLON() {
	    return this.getToken(GramCadenasParser.SEMICOLON, 0);
	};

	enterRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.enterDeclaracionValor(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.exitDeclaracionValor(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof GramCadenasVisitor ) {
	        return visitor.visitDeclaracionValor(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

GramCadenasParser.DeclaracionValorContext = DeclaracionValorContext;

class FuncionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GramCadenasParser.RULE_funcion;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class FuncionesContext extends FuncionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	FUN() {
	    return this.getToken(GramCadenasParser.FUN, 0);
	};

	NOMBRE() {
	    return this.getToken(GramCadenasParser.NOMBRE, 0);
	};

	LBRACE() {
	    return this.getToken(GramCadenasParser.LBRACE, 0);
	};

	instruccion() {
	    return this.getTypedRuleContext(InstruccionContext,0);
	};

	RBRACE() {
	    return this.getToken(GramCadenasParser.RBRACE, 0);
	};

	LPAREN() {
	    return this.getToken(GramCadenasParser.LPAREN, 0);
	};

	argumentos() {
	    return this.getTypedRuleContext(ArgumentosContext,0);
	};

	RPAREN() {
	    return this.getToken(GramCadenasParser.RPAREN, 0);
	};

	enterRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.enterFunciones(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.exitFunciones(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof GramCadenasVisitor ) {
	        return visitor.visitFunciones(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

GramCadenasParser.FuncionesContext = FuncionesContext;

class ArgumentosContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GramCadenasParser.RULE_argumentos;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class ArgumentacionContext extends ArgumentosContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	variable() {
	    return this.getTypedRuleContext(VariableContext,0);
	};

	COMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(GramCadenasParser.COMA);
	    } else {
	        return this.getToken(GramCadenasParser.COMA, i);
	    }
	};


	argumentos = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentosContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentosContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.enterArgumentacion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof GramCadenasListener ) {
	        listener.exitArgumentacion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof GramCadenasVisitor ) {
	        return visitor.visitArgumentacion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

GramCadenasParser.ArgumentacionContext = ArgumentacionContext;

class InstruccionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = GramCadenasParser.RULE_instruccion;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class InstruccionesContext extends InstruccionContext {

    constructor(parser, ctx) {
        super(parser);
